@@ -6,6 +6,7 @@ version <next>:
 - MacCaption demuxer
 - PGX decoder
 - chromanr video filter
+- VDPAU accelerated HEVC 10/12bit decoding
 
 
 version 4.3:
